Bug 1092959 - Firefox Hello header is misaligned

--- a/app/style/transitions.css
+++ b/app/style/transitions.css
@@ -11,7 +11,6 @@ body[data-layout="wizard"] #wizard-panel {
 
 body[data-layout="wizard"] #calllog-panel {
   transform: translateX(100%);
-  display: none;
 }
 
 /*
